k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synclyft-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your-domain.com
      http:
        paths:

          - path: /interview
            pathType: Prefix
            backend:
              service:
                name: interview-service
                port:
                  number: 80

          - path: /voice
            pathType: Prefix
            backend:
              service:
                name: voice-service
                port:
                  number: 80

          - path: /vision
            pathType: Prefix
            backend:
              service:
                name: vision-service
                port:
                  number: 80
